--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
-"dependencies": {
-  "xml2js": "^0.6.2",
-  "cheerio": "^1.0.0"
+{
+  "type": "module",
+  "dependencies": {
+    "cheerio": "^1.0.0"
+  }
 }
