--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "count": >0,
-  "entries": [
-    "/blog/xyz",
-    "/blog/abc"
-  ]
+  "type": "module",
+  "dependencies": {
+    "cheerio": "^1.0.0",
+    "node-fetch": "^3.3.2"
+  }
 }
+
 
