--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-  "type": "module",
-  "dependencies": {
-    "cheerio": "^1.0.0",
-    "node-fetch": "^3.3.2"
-  }
+  "ok": false,
+  "error": "...",
+  "stack": "..."
 }
-
-
